--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -33,15 +33,9 @@
           <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
               <li><a href="#"></a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accueil <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="{{ path('iut_nuptias_accueil') }}">Présentation du site</a></li>
-                  <li><a href="{{ path('iut_nuptias_accueil_packs') }}">Packs</a></li>
-                </ul>
-              </li>
+              <li><a href="{{ path('iut_nuptias_accueil') }}">Accueil</a></li>
               <li><a href="#">Espace personnel</a></li>
-              <li><a href="#">Créez votre mariage</a></li>
+              <li><a href="{{ path('iut_nuptias_accueil_packs') }}">Créez votre mariage</a></li>
               <li><a href="#">Nos prestataires</a></li>
               <li><a href="#">Contact</a></li>
 
@@ -58,9 +52,11 @@
 
       <hr>
 
-      <footer>
-        <p>Mentions légales © {{ 'now'|date('Y') }}</p>
-      </footer>
+      <div id="footer">
+        <div class="container text-center">
+          <p>Mentions légales © {{ 'now'|date('Y') }}</p>
+        </div>
+      </div>
 
       {% block javascripts %}
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
