--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -35,7 +35,7 @@
               <li><a href="#"></a></li>
               <li><a href="{{ path('iut_nuptias_accueil') }}">Accueil</a></li>
               <li><a href="#">Espace personnel</a></li>
-              <li><a href="{{ path('iut_nuptias_accueil_packs') }}">Créez votre mariage</a></li>
+              <li><a href="{{ path('iut_nuptias_packs') }}">Créez votre mariage</a></li>
               <li><a href="#">Nos prestataires</a></li>
               <li><a href="#">Contact</a></li>
 
