--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -16,6 +16,6 @@
     Exemple
   </p>
 
-  <a href="{{ path('iut_nuptias_accueil_packs') }}">De plus des packs ... </a>
+  <a href="{{ path('iut_nuptias_accueil') }}">De plus des packs ... </a>
 
 {% endblock %}
