modified: 	src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig

--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
@@ -11,17 +11,24 @@
   <div class="row">
   <div class="col-md-4">
     <h2>Pack DIY</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>Vous avez déjà une vision d'ensemble sur votre mariage et n'avait pas besoin d'etre totalement guidé.
+      Vous voulez garder un certain degré de liberté. Dans ce cas le pack Do it Yourself est fait pour vous.
+      <hr> Ce pack n'inclut par défaut aucun prestataires.</p>
     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
   </div>
   <div class="col-md-4">
     <h2>Pack Classique</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>Vous avez quelques idées à propos des éléments indispensables à votre mariage.
+      Vous voulez simplement pouvoir rapidement sélectionner les prestataires que vous saurez utiles à votre mariage.
+      Choisissez le pack Classique. <hr> Ce pack inclut des informations pour être prestataires (Salle, traiteur)</p>
     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
  </div>
   <div class="col-md-4">
     <h2>Pack All-in-one</h2>
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    <p>Vous n'avez jamais participé à l'organisation d'un mariage.
+      Vous voulez que tout soit parfait et vous avez besoin d'aide.
+      Ne vous inquiétez plus en choisissant le pack All-in-one. <hr>
+      Ce pack inclut un guide vers tous les prestataires primordiales à l'organisation de votre mariage.</p>
     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
   </div>
 </div>
