Committer: FALL Mohameth <fallm@hostname.iut2.upmf-grenoble.fr>  On branch master  Changes to be committed: 	modified:   src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig

--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -6,14 +6,20 @@
 {% endblock %}
 
 {% block body %}
-  <h1>Organiser votre mariage</h1>
+  <h1>Organiser votre mariage, gérer votre budget et vos invités</h1>
 
   <p>
-    Lorem ipsum
-  </p>
+    Pour vous faciliter la vie, nous vous proposerons un site qui vous permettra
+    de facilement organiser votre mariage.
+    En vous inscrivant vous pourrez gratuitement :
+      <ul><li>Gérer efficacement votre carnet d'adresse pour la fête de votre mariage,
+      envoyer en un clic une invitation à vos invités et recevez instantanément leurs réponses.</li<
+          <li>Gérer votre budget ...</li>
+          <li>Trouver rapidement : <ul><li> une salle</li>
+                                       <li> un traiteur</li>
+                                       <li> un DJ </li></ul>
 
-  <p>
-    Exemple
+      </ul>
   </p>
 
   <a href="{{ path('iut_nuptias_accueil') }}">De plus des packs ... </a>
