--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LOGO</a>
+            <a class="navbar-brand" href="{{ path('iut_nuptias_accueil') }}">LOGO</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,7 +34,7 @@
               <ul class="nav navbar-nav navbar-right">
               <li><a href="#"></a></li>
               <li><a href="{{ path('iut_nuptias_accueil') }}">Accueil</a></li>
-              <li><a href="#">Espace personnel</a></li>
+              <li><a href="{{ path('iut_nuptias_dashBoard') }}">Espace personnel</a></li>
               <li><a href="{{ path('iut_nuptias_packs') }}">Créez votre mariage</a></li>
               <li><a href="#">Nos prestataires</a></li>
               <li><a href="#">Contact</a></li>
