--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
@@ -15,6 +15,8 @@
       Vous voulez garder un certain degré de liberté. Dans ce cas le pack Do it Yourself est fait pour vous.
       <hr> Ce pack n'inclut par défaut aucun prestataires.</p>
     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_organisation') }}">Commencer</a>
+
   </div>
   <div class="col-md-4">
     <h2>Pack Classique</h2>
