--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -6,12 +6,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}Ton mariage de rêve - {% endblock %}</title>
+        <title>{% block title %}Ton mariage de rêve{% endblock %}</title>
 
         {% block stylesheets %}
           <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
+          <link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css">
         {% endblock %}
     </head>
 
