Fichier css et logo

--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
@@ -11,27 +11,26 @@
   <div class="row">
   <div class="col-md-4">
     <h2>Pack DIY</h2>
-    <p>Vous avez déjà une vision d'ensemble sur votre mariage et n'avait pas besoin d'etre totalement guidé.
+    <p class="description-pack">Vous avez déjà une vision d'ensemble sur votre mariage et n'avait pas besoin d'etre totalement guidé.
       Vous voulez garder un certain degré de liberté. Dans ce cas le pack Do it Yourself est fait pour vous.
       <hr> Ce pack n'inclut par défaut aucun prestataires.</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
     <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_organisation') }}">Commencer</a>
 
   </div>
   <div class="col-md-4">
     <h2>Pack Classique</h2>
-    <p>Vous avez quelques idées à propos des éléments indispensables à votre mariage.
+    <p class="description-pack">Vous avez quelques idées à propos des éléments indispensables à votre mariage.
       Vous voulez simplement pouvoir rapidement sélectionner les prestataires que vous saurez utiles à votre mariage.
       Choisissez le pack Classique. <hr> Ce pack inclut des informations pour être prestataires (Salle, traiteur)</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_organisation') }}">Commencer</a>
  </div>
   <div class="col-md-4">
     <h2>Pack All-in-one</h2>
-    <p>Vous n'avez jamais participé à l'organisation d'un mariage.
+    <p class="description-pack">Vous n'avez jamais participé à l'organisation d'un mariage.
       Vous voulez que tout soit parfait et vous avez besoin d'aide.
       Ne vous inquiétez plus en choisissant le pack All-in-one. <hr>
       Ce pack inclut un guide vers tous les prestataires primordiales à l'organisation de votre mariage.</p>
-    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_organisation') }}">Commencer</a>
   </div>
 </div>
 
