--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" type="image/png" href="{{asset('public/images/Logo.png')}}" />
         <title>{% block title %}Ton mariage de rêve{% endblock %}</title>
 
         {% block stylesheets %}
@@ -27,7 +27,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('iut_nuptias_accueil') }}" style="padding : 0;"><img src="{{asset('Logo.png')}}" width="50" height="50" /></a>
+            <a class="navbar-brand" href="{{ path('iut_nuptias_accueil') }}" style="padding : 0;"><img src="{{asset('public/images/Logo.png')}}" width="50" height="50" /></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
