--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -45,7 +45,8 @@
                       {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                   </a>
               {% else %}
-              <a href="{{ path('fos_user_registration_register') }}">Inscription/Connexion</a>
+              <a href="{{ path('prestataire_registration') }}">Inscription</a>
+              <a href="{{ path('fos_user_security_login')}}">Connexion</a>
               {% endif %}
               </li>
 
