--- a/app/Resources/FOSUserBundle/views/Registration/prestataire.form.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/prestataire.form.html.twig
@@ -2,7 +2,7 @@
 
 {% block fos_user_content %}
     {% trans_default_domain 'FOSUserBundle' %}
-    <h1>Incripion en tant que Prestataire</h1>
+    <h1>Inscription en tant que Prestataire</h1>
     <form action="{{ path('prestataire_registration') }}" method="POST">
         {{ form_widget(form) }}
         <div>
