--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
@@ -5,38 +5,9 @@
 {% endblock %}
 
 {% block body %}
+
   <h1> Espace Personnel </h1>
   <h3> Récapitulatif de votre mariage : </h3>
-
-  {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}<!--Si la personne n'est pas connecté!-->
-    <ul class="nav nav-tabs">
-  {% else %}
-
-<div class="modal fade in" id="myModal" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-    <p> Inscrivez-vous maintenant pour organiser rapidement et facilement votre
-        fête de mariage, ne perdez plus une seconde !
-    </p>
-    <ul class="nav nav-tabs" style=" -webkit-filter: blur(2px); filter: blur(2px);">
-  {% endif %}
 
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Général</a></li>
@@ -51,30 +22,106 @@
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h3>Général</h3>
-      <a class="btn btn-primary btn-info"
-         href="{{ path('iut_nuptias_mariage') }}">Commencer</a>
-      <h4>Infos générales : </h4>
-      <p> Date du mariage  : </p>
+      {% if listeMariage == false %}
+         <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage') }}">Commencer</a>
+      {% else %}
+        {% for mariage in listeMariage %}
+
+          <h4>Infos générales : </h4>
+          <p> Date du mariage  : {{ mariage.date|date('d/m/Y') }}</p>
+          <p> Ville du mariage : {{ mariage.ville }}</p>
+          <p> Nombre d'invités : {{ mariage.nbInvites }}</p>
+          <p> Budget du mariage : {{ mariage.budget }}</p>
+
+          {% if mariage.budgetSalle %}
+            <p> Budget pour la salle : {{ mariage.budgetSalle }}</p>
+          {% endif %}
+          {% if mariage.budgetTraiteur %}
+            <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }}</p>
+          {% endif %}
+          {% if mariage.budgetPhotographe %}
+            <p> Budget pour le photographe : {{ mariage.budgetPhotographe }}</p>
+          {% endif %}
+          {% if mariage.budgetDJ %}
+            <p> Budget pour le DJ : {{ mariage.budgetDJ }}</p>
+          {% endif %}
+
+        {% endfor %}
+        <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage') }}">Ajouter un autre mariage</a>
+      {% endif %}
     </div>
+
+
+
     <div id="invites" class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Some content in menu 1.</p>
+      <h3>Gestion des invites </h3>
+      {% if listeMariage %}
+        {% for mariage in listeMariage %}
+          <p> Nombre d'invités : {{ mariage.nbInvites }}</p>
+
+
+        {% endfor %}
+      {% endif %}
     </div>
+
+
+
     <div id="salle" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Some content in menu 2.</p>
+      <h3>Gestion de la salle </h3>
+      {% if listeMariage %}
+        {% for mariage in listeMariage %}
+
+          {% if mariage.budgetSalle %}
+            <p> Budget pour la salle : {{ mariage.budgetSalle }}</p>
+          {% endif %}
+
+        {% endfor %}
+      {% endif %}
     </div>
+
+
+
     <div id="traiteur" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Some content in menu 2.</p>
+      <h3>Gestion du traiteur </h3>
+      {% if listeMariage %}
+        {% for mariage in listeMariage %}
+
+        {% if mariage.budgetTraiteur %}
+          <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }}</p>
+        {% endif %}
+
+        {% endfor %}
+      {% endif %}
     </div>
+
+
+
     <div id="photographe" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Some content in menu 2.</p>
+      <h3>Gestion du photographe </h3>
+      {% if listeMariage %}
+        {% for mariage in listeMariage %}
+
+        {% if mariage.budgetPhotographe %}
+          <p> Budget pour le photographe : {{ mariage.budgetPhotographe }}</p>
+        {% endif %}
+
+        {% endfor %}
+      {% endif %}
     </div>
+
+
+
     <div id="DJ" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Some content in menu 2.</p>
+      <h3>Gestion du DJ </h3>
+      {% if listeMariage %}
+        {% for mariage in listeMariage %}
+
+        {% if mariage.budgetDJ %}
+          <p> Budget pour le DJ : {{ mariage.budgetDJ }}</p>
+        {% endif %}
+
+        {% endfor %}
+      {% endif %}
     </div>
   </div>
 
