Modification des formulaires de connexion et de creation de mariage.

--- a/app/Resources/FOSUserBundle/views/Registration/admin.form.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/admin.form.html.twig
@@ -2,7 +2,7 @@
 
 {% block fos_user_content %}
     {% trans_default_domain 'FOSUserBundle' %}
-    <h1>Incripion en tant que admin</h1>
+    <h1>Insccription en tant que admin</h1>
     <form action="{{ path('admin_registration') }}" method="POST">
         {{ form_widget(form) }}
         <div>
