--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -4,31 +4,31 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post" class="form-horizontal">
+<h1>Connexion</h1>
+
+<form action="{{ path("fos_user_security_check") }}" method="post" >
   {% if csrf_token %}
       <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
   {% endif %}
-  <fieldset>
-    <legend>Connexion</legend>
+
+  <div>
+
     <div class="form-group">
-      <label class="control-label col-sm-2" for="username">{{ 'security.login.username'|trans }}</label>
-      <div class="col-sm-10">
-        <input type="text" id="username" name="_username" value="" required="required"/>
-      </div>
+      <label class="control-label required" for="username">{{ 'security.login.username'|trans }}</label>
+        <input type="text" id="username" name="_username" value="" required="required" class="form-control" />
     </div>
 
     <div class="form-group">
-      <label class="control-label col-sm-2" for="password">{{ 'security.login.password'|trans }}</label>
-      <div class="col-sm-10">
-        <input type="password" id="password" name="_password" required="required"/>
-      </div>
+      <label class="control-label required" for="password">{{ 'security.login.password'|trans }}</label>
+        <input type="password" id="password" name="_password" required="required" class="form-control" />
     </div>
 
     <div class="form-group">
         <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
       <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
     </div>
-
+  </div>
+  <div>
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-  </fieldset>
+  </div>
 </form>
