--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -45,8 +45,7 @@
                       {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                   </a>
               {% else %}
-              <a href="{{ path('prestataire_registration') }}">Inscription</a>
-              <a href="{{ path('fos_user_security_login')}}">Connexion</a>
+                  <a href="{{ path('client_registration') }}">Inscription/Connexion</a>
               {% endif %}
               </li>
 
