--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 
         {% block stylesheets %}
           <link href=" {{ asset('css/theme.min.css')}}"
-          rel="stylesheet"²
+          rel="stylesheet"
           crossorigin="anonymous">
           <link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css">
         {% endblock %}
