--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/mariage.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/mariage.html.twig
@@ -30,5 +30,10 @@
 
     {{ form_end(form) }}
   </div>
-  
+
 {% endblock %}
+
+{# {% block javascripts %}
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
+{% endblock %}
+#}
