--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -39,15 +39,25 @@
               <li><a href="{{ path('iut_nuptias_packs') }}">Créez votre mariage</a></li>
               <li><a href="#">Nos prestataires</a></li>
               <li><a href="#">Contact</a></li>
-              <li>
+
               {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="glyphicon glyphicon-envelope"></span> <span class="badge">0</span></a>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-header">Notifications</li>
+                  </ul>
+                </li>
+                <li>
                   <a href="{{ path('fos_user_security_logout') }}">
                       {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                   </a>
+                </li>
               {% else %}
+                <li>
                   <a href="{{ path('client_registration') }}">Inscription/Connexion</a>
+                </li>
               {% endif %}
-              </li>
+
 
             </ul>
           </div><!-- /.navbar-collapse -->
