--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -13,7 +13,7 @@
     de facilement organiser votre mariage.
     En vous inscrivant vous pourrez gratuitement :
       <ul><li>Gérer efficacement votre carnet d'adresse pour la fête de votre mariage,
-      envoyer en un clic une invitation à vos invités et recevez instantanément leurs réponses.</li<
+      envoyer en un clic une invitation à vos invités et recevez instantanément leurs réponses.</li>
           <li>Gérer votre budget ...</li>
           <li>Trouver rapidement : <ul><li> une salle</li>
                                        <li> un traiteur</li>
